--- a/app/src/main/res/layout/popup_intro.xml
+++ b/app/src/main/res/layout/popup_intro.xml
@@ -22,23 +22,39 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="265dp"
+            android:layout_marginTop="230dp"
             android:text="Welcome to Terraforming!"
             android:textColor="@color/white"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="200dp"
+            android:id="@+id/description"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:gravity="center"
             android:text="This is a quick-start guide on how to use this app."
             android:textColor="@color/white"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            android:text="Tap anywhere to continue"
+            android:textColor="@color/quantum_grey"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/description"
+            app:layout_constraintStart_toStartOf="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/description" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
