--- a/app/src/main/res/layout/bottom_sheet_horizontal_scroll.xml
+++ b/app/src/main/res/layout/bottom_sheet_horizontal_scroll.xml
@@ -282,6 +282,40 @@
         </LinearLayout>
 
 
+        <!--Card Gen1-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardGen1"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_margin="18dp"
+                android:checkable="true"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp"
+                app:checkedIconSize="0dp"
+                app:strokeColor="@color/card_border_selector"
+                app:strokeWidth="10dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/gen1" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Gen 1" />
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </HorizontalScrollView>
