--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="focal_radius_side">25dp</dimen>
+    <dimen name="focal_radius_location_filter">20dp</dimen>
+    <dimen name="focal_radius_save">17dp</dimen>
     <dimen name="focal_radius_shutter">30dp</dimen>
 </resources>
