bgcolour and text color changes, removed stroke

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="16dp"
         app:cardBackgroundColor="#FFF9F2"
         android:rotation="10"
+        app:strokeWidth="0dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toTopOf="@+id/tvShutter"
@@ -31,7 +32,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        app:strokeWidth="0dp"
         android:rotation="-1.5"
+        app:cardBackgroundColor="#FFF9F2"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toTopOf="@+id/tvShutter"
@@ -44,7 +47,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFF9F2"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingLeft="20dp"
